--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,4 @@ kernel/include/config/
 kernel/.config.old
 libctest
 kernel/arch/aarch64/include/arch/limine.h
+kernel/arch/x86/include/arch/limine.h
