--- a/.gitignore
+++ b/.gitignore
@@ -9,21 +9,21 @@
 *.ors
 *.rlib
 boot/boot
-shitOS.img
-shitOS_uefi.img
+vix.img
+vix_uefi.img
 bochsrc
 bx_enh_dbg.ini
 mem.bin
-shitOS.img.lock
+vix.img.lock
 boot/stage2/stage2
 boot/stage1
 shitshell/shitshell
-shitOS_app.img
+vix_app.img
 startup/x86/startup
 kernel_shitshell.bin
 kernel.bin
 initramfs.bin
-shitOS.iso
+vix.iso
 roramfs_create
 roramfs.fs
 kernel/scripts/shconfig/shconfig
