--- a/boot/rootfs-x86_32/boot/grub/grub.cfg
+++ b/boot/rootfs-x86_32/boot/grub/grub.cfg
@@ -1,7 +1,7 @@
 set default=0
 set timeout=0
  
-menuentry "shitOS" {
+menuentry "vix" {
    multiboot2 /boot/kernel.bin
    module2 /boot/initramfs.bin
 }
