--- a/boot/rootfs-x86_32/boot/limine.cfg
+++ b/boot/rootfs-x86_32/boot/limine.cfg
@@ -6,7 +6,7 @@ VERBOSE=yes
 #TERM_WALLPAPER=${WALLPAPER_PATH}
 TERM_BACKDROP=008080
 
-:shitOS
+:vix
     PROTOCOL=multiboot2
     KERNEL_PATH=boot:///boot/kernel.bin
 
