--- a/boot/rootfs-x86_64/boot/limine.cfg
+++ b/boot/rootfs-x86_64/boot/limine.cfg
@@ -6,7 +6,7 @@ VERBOSE=yes
 #TERM_WALLPAPER=${WALLPAPER_PATH}
 TERM_BACKDROP=008080
 
-:shitOS
+:vix
     PROTOCOL=limine
     KERNEL_PATH=boot:///boot/kernel.o
 
