--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -1,17 +1,48 @@
+# erase defaults
+CXX=
+LD=
+
 include Makefile.version
 
 BUILD_SUBDIRS := kernel drivers fs net tests cppstd mm
 
-ifndef ARCH
-$(error must have ARCH environment variable set)
-endif
-
-SRCARCH := $(ARCH)
-export SRCARCH ARCH
-
 -include .config
 BUILD_ARCH := $(patsubst "%",%,$(CONFIG_ARCH))
-export SRCARCH ARCH
+
+define getcfgvar
+ifdef CONFIG_$(1)
+ifeq ($($(1)),)
+$(1) = $(subst $\",,$(CONFIG_$(1)))
+endif
+endif
+endef
+
+$(eval $(call getcfgvar,ARCH))
+ifdef M
+$(eval $(call getcfgvar,CXX))
+$(eval $(call getcfgvar,LD))
+$(eval $(call getcfgvar,NM))
+$(eval $(call getcfgvar,OBJCOPY))
+$(eval $(call getcfgvar,CXXFLAGS))
+$(eval $(call getcfgvar,LDFLAGS))
+endif
+
+
+ifndef ARCH
+$(error must have ARCH environment variable set or .config must exist)
+endif
+
+export ARCH
+
+# compiler stuff
+ifndef M
+CXX      = $(CROSS_COMPILE)g++
+LD       = $(CROSS_COMPILE)ld
+NM       = $(CROSS_COMPILE)nm
+OBJCOPY  = $(CROSS_COMPILE)objcopy
+CXXFLAGS = 
+LDFLAGS  = 
+endif
 
 include scripts/Makefile.build
 
@@ -20,13 +51,23 @@ BUILD_SUBDIRS += arch/$(BUILD_ARCH)
 include arch/$(BUILD_ARCH)/Makefile.arch
 endif
 
-.PHONY: all
-all: genconfig
+export INT_CXX INT_LD INT_NM INT_OBJCOPY INT_CXXFLAGS INT_LDFLAGS
+export CXX LD NM OBJCOPY CXXFLAGS LDFLAGS
 
-genconfig:
+# module stuff
+ifdef M
+include $(M)/Makefile
+endif
+
+.PHONY: all
+all: syncconfig
+ifndef M
+	@$(MAKE) kernel
+endif
+
+syncconfig:
 	@$(MAKE) --quiet -C scripts/kconfig/ config
 	@scripts/kconfig/config Kconfig --silent --syncconfig
-	@$(MAKE) kernel
 
 help:
 	@echo 'Cleaning targets:'
@@ -63,7 +104,7 @@ alldefconfig:
 	@scripts/kconfig/config Kconfig --silent --alldefconfig
 
 # clean targets
-clean:
+clean: modclean
 	@rm -f kernel.o kernel.bin symtab.s symtab.os kernel_partial.o
 	@find ./arch ./drivers ./fs ./include ./kernel ./net ./mm ./cppstd ./tests \( -name '*.oasm' -o -name '*.onasm' -o -name '*.ocpp' -o -name '*.ors' -o -name '*.rlib' -o -name '*.o' -o -name '*.os' \) -type f -delete
 
@@ -71,23 +112,17 @@ proper: clean
 	@$(MAKE) --quiet -C scripts/kconfig clean
 	@rm -f .config .config_old
 
-# compiler stuff
-
-CXX      = $(CROSS_COMPILE)g++
-LD       = $(CROSS_COMPILE)ld
-NM       = $(CROSS_COMPILE)nm
-OBJCOPY  = $(CROSS_COMPILE)objcopy
-export CXX LD NM OBJCOPY CXXFLAGS LDFLAGS
-
 # recursive stuff - most of this is based on https://stackoverflow.com/q/56001646/20742078
-OBJS     :=
+OBJS         :=
+MODS         :=
 EXTRATARGETS :=
-objtree  := .
-srctree  := .
+objtree      := .
+srctree      := .
 define build_subdir
 objtree := $$(objtree)/$(1)
 srctree := $$(srctree)/$(1)
 
+obj-m :=
 obj-y :=
 obj-d :=
 extratargets-y :=
@@ -95,6 +130,7 @@ extratargets-y :=
 include $$(srctree)/Makefile
 
 OBJS += $$(patsubst %,$$(objtree)/%,$$(obj-y))
+MODS += $$(patsubst %,$$(objtree)/%,$$(obj-m))
 EXTRATARGETS += $$(patsubst %,$$(objtree)/%,$$(extratargets-y))
 
 $$(foreach subdir,$$(obj-d),$$(eval $$(call build_subdir,$$(subdir))))
@@ -103,11 +139,35 @@ srctree := $$(patsubst %/$(1),%,$$(srctree))
 objtree := $$(patsubst %/$(1),%,$$(objtree))
 endef
 
+ifndef M
 $(foreach dir, $(BUILD_SUBDIRS), $(eval $(call build_subdir,$(dir))))
-
+endif
 
 # final link
 .PHONY: kernel
 kernel: $(EXTRATARGETS) $(OBJS)
-	@$(LD) $(LDFLAGS) -r $(OBJS) -o kernel_partial.o
+	@$(INT_LD) $(INT_LDFLAGS) -r $(OBJS) -o kernel_partial.o
 	@./arch/$(BUILD_ARCH)/archlink.sh
+
+# kernel module stuff
+ifdef M
+MODS = $(addprefix $(M)/, $(obj-m))
+endif
+
+MOD_OBJS := 
+
+define build_mod
+MOD_OBJS += $(addprefix $(dir $(1))/,$($(notdir $(basename $(1)))-y))
+
+$(1): $(addprefix $(dir $(1))/,$($(notdir $(basename $(1)))-y))
+	@echo "  LD $(notdir $(1))"
+	@$(INT_LD) $(INT_LDFLAGS) -r $(addprefix $(dir $(1))/,$($(notdir $(basename $(1)))-y)) -o $(1)
+endef
+
+$(foreach dir, $(MODS), $(eval $(call build_mod,$(dir))))
+
+modules: $(MODS)
+	@echo "  M: $(notdir $(MODS))"
+
+modclean:
+	@rm -f $(MODS) $(MOD_OBJS)
