--- a/kernel/arch/x86/Makefile.arch
+++ b/kernel/arch/x86/Makefile.arch
@@ -1,7 +1,7 @@
-override CXXFLAGS += -nostdlib -fno-pie -mno-red-zone -ffreestanding -fno-exceptions -mno-mmx -mno-sse -mno-sse2
+override INT_CXXFLAGS += -nostdlib -fno-pie -mno-red-zone -ffreestanding -fno-exceptions -mno-mmx -mno-sse -mno-sse2
 
 ifeq ($(CONFIG_ENABLE_KERNEL_64), y)
-override CXXFLAGS += -mcmodel=kernel
+override INT_CXXFLAGS += -mcmodel=kernel
 endif
 
 %.onasm: %.asm
@@ -9,11 +9,11 @@ endif
 	@nasm -f elf $< -o $@
 
 ifeq ($(CONFIG_ENABLE_FTRACE), y)
-override CXXFLAGS += -finstrument-functions
+override INT_CXXFLAGS += -finstrument-functions
 endif
 
 ifeq ($(CONFIG_ENABLE_STACKPROTECTOR), y)
-override CXXFLAGS += -fstack-protector-strong -mstack-protector-guard=global
+override INT_CXXFLAGS += -fstack-protector-strong -mstack-protector-guard=global
 else
-override CXXFLAGS += -fno-stack-protector
+override INT_CXXFLAGS += -fno-stack-protector
 endif
