use kprintf for logging in most places

--- a/kernel/kernel/Makefile
+++ b/kernel/kernel/Makefile
@@ -1,4 +1,4 @@
-obj-y += cpp.ocpp debug.ocpp framebuffer.ocpp kernel.ocpp log.ocpp psf.ocpp scheduler.ocpp stdio.ocpp stdlib.ocpp time.ocpp kprintf.ocpp
+obj-y += cpp.ocpp debug.ocpp framebuffer.ocpp kernel.ocpp psf.ocpp scheduler.ocpp stdio.ocpp stdlib.ocpp time.ocpp kprintf.ocpp
 
 obj-$(CONFIG_UBSAN) += ubsan.ocpp
 
