--- a/kernel/kernel/Makefile
+++ b/kernel/kernel/Makefile
@@ -1,6 +1,4 @@
-obj-y += cpp.ocpp debug.ocpp framebuffer.ocpp kernel.ocpp psf.ocpp scheduler.ocpp stdio.ocpp stdlib.ocpp time.ocpp kprintf.ocpp
-
-obj-$(CONFIG_UBSAN) += ubsan.ocpp
+obj-y += debug.ocpp framebuffer.ocpp kernel.ocpp psf.ocpp scheduler.ocpp stdio.ocpp time.ocpp kprintf.ocpp
 
 obj-$(CONFIG_ENABLE_BUILTIN_FONT) += unifont.bin.ocpp
 
