--- a/kernel/arch/x86/Kconfig
+++ b/kernel/arch/x86/Kconfig
@@ -2,6 +2,10 @@ config ARCH_X86
   bool
   default y
 
+config ARCH_HAS_PAGING
+  bool
+  default y
+
 config ENABLE_KERNEL_64
   default n
   bool "64-bit kernel"
