--- a/.gitignore
+++ b/.gitignore
@@ -37,5 +37,5 @@ kernel/.config.old
 libctest
 kernel/arch/aarch64/include/arch/limine.h
 kernel/arch/x86/include/arch/limine.h
-docs/
+kernel/docs/
 sysroot/
