--- a/kernel/libcxx/src/Makefile
+++ b/kernel/libcxx/src/Makefile
@@ -2,6 +2,6 @@ obj-y += string.ocpp cpp.ocpp
 
 obj-y += stdlib.ocpp
 
-obj-y += mathfuncs.ocpp
+obj-y += libgcc.ocpp
 
 obj-$(CONFIG_UBSAN) += ubsan.ocpp
