--- a/kernel/tests/Makefile
+++ b/kernel/tests/Makefile
@@ -1,1 +1,1 @@
-obj-$(CONFIG_ENABLE_TESTS) := tests.ocpp malloc_test.ocpp thread_test.ocpp
+obj-$(CONFIG_ENABLE_TESTS) := tests.ocpp malloc_test.ocpp
