--- a/kernel/arch/m68k/Makefile
+++ b/kernel/arch/m68k/Makefile
@@ -1,6 +1,6 @@
 obj-$(CONFIG_ENABLE_STACKPROTECTOR) += stackprotector.ocpp
 
 obj-y += generic/cpu.ocpp generic/devices.ocpp generic/textoutput.ocpp
-obj-y += archinit.ocpp
+obj-y += archinit.ocpp except.ocpp except.oS
 
 obj-y += libgcc.ocpp
