--- a/.gitignore
+++ b/.gitignore
@@ -8,35 +8,35 @@
 *.oS
 *.ors
 *.rlib
-boot/boot
-vix.img
-vix_uefi.img
-bochsrc
-bx_enh_dbg.ini
-mem.bin
-vix.img.lock
-boot/stage2/stage2
-boot/stage1
-shitshell/shitshell
-vix_app.img
-startup/x86/startup
+
 kernel_shitshell.bin
 kernel.bin
 initramfs.bin
-vix.iso
-roramfs_create
-roramfs.fs
-kernel/scripts/shconfig/shconfig
-kernel/include/generated
-kernel/config_gen
-kernel/scripts/shbuild
-kernel/symtab.s
-kernel/.config
-kernel/include/config/
-kernel/.config.old
-libctest
-kernel/arch/aarch64/include/arch/limine.h
-kernel/arch/x86/include/arch/limine.h
-kernel/docs/
-sysroot/
-scripts/
+
+/boot/boot
+/vix.img
+/vix_uefi.img
+/bochsrc
+/bx_enh_dbg.ini
+/mem.bin
+/vix.img.lock
+/boot/stage2/stage2
+/boot/stage1
+/shitshell/shitshell
+/vix_app.img
+/startup/x86/startup
+/vix.iso
+/roramfs_create
+/roramfs.fs
+/kernel/include/generated
+/kernel/config_gen
+/kernel/symtab.s
+/kernel/.config
+/kernel/include/config/
+/kernel/.config.old
+/libctest
+/kernel/arch/aarch64/include/arch/limine.h
+/kernel/arch/x86/include/arch/limine.h
+/kernel/docs/
+/sysroot/
+/scripts/
