--- a/kernel/arch/aarch64/Makefile
+++ b/kernel/arch/aarch64/Makefile
@@ -3,7 +3,7 @@ obj-$(CONFIG_ENABLE_STACKPROTECTOR) += stackprotector.ocpp
 obj-d += drivers
 
 obj-y += generic/cpu.ocpp generic/devices.ocpp generic/memory.ocpp generic/textoutput.ocpp
-obj-y += archinit.ocpp memmap.ocpp exceptions.ocpp
+obj-y += archinit.ocpp memmap.ocpp exceptions.ocpp sched.ocpp sched.oS
 
 
 extratargets-y += include/arch/limine.h
