removed linux syscalls from x86 dir + sched stuff

--- a/kernel/arch/x86/Makefile
+++ b/kernel/arch/x86/Makefile
@@ -1,5 +1,3 @@
-obj-d += syscalls
-
 obj-$(CONFIG_ENABLE_NETWORKING) += drivers/net/rtl8139.ocpp
 obj-$(CONFIG_ENABLE_FTRACE) += trace.ocpp
 obj-$(CONFIG_ENABLE_STACKPROTECTOR) += stackprotector.ocpp
@@ -10,7 +8,7 @@ obj-y += cpubasics.ocpp cpuid.ocpp elf.ocpp gdt.ocpp modelf.ocpp multitasking.oc
 
 obj-$(CONFIG_ENABLE_KERNEL_32) += drivers/text80x25.ocpp
 obj-$(CONFIG_ENABLE_KERNEL_32) += paging.onasm isr.onasm simd.onasm gdt.onasm idt.onasm
-obj-$(CONFIG_ENABLE_KERNEL_32) += archinit_32.ocpp multiboot2.ocpp memorymap.ocpp isr.ocpp isrs.ocpp ldt.ocpp idt.ocpp paging_32.ocpp syscall_32.oS syscall_32.ocpp syscalls_32.ocpp except_32.oS except_32.ocpp
+obj-$(CONFIG_ENABLE_KERNEL_32) += archinit_32.ocpp multiboot2.ocpp memorymap.ocpp isr.ocpp isrs.ocpp ldt.ocpp idt.ocpp paging_32.ocpp syscall_32.oS syscall_32.ocpp except_32.oS except_32.ocpp
 
 obj-$(CONFIG_ENABLE_KERNEL_64) += archinit_64.ocpp paging_64.ocpp
 
