--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -97,7 +97,7 @@ jobs:
       - name: install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install ansifilter qemu-system-arm qemu-efi-aarch64 seabios llvm-dev libclang-dev clang python3 pkg-config flex bison gcc-aarch64-linux-gnu g++-aarch64-linux-gnu binutils-aarch64-linux-gnu git nasm gzip gawk mtools xxd
+          sudo apt-get install xvfb ffmpeg ansifilter qemu-system-arm qemu-efi-aarch64 seabios llvm-dev libclang-dev clang python3 pkg-config flex bison gcc-aarch64-linux-gnu g++-aarch64-linux-gnu binutils-aarch64-linux-gnu git nasm gzip gawk mtools xxd
 
       - name: build limine
         run: |
@@ -118,13 +118,15 @@ jobs:
       - name: run
         run: |
           cd $GITHUB_WORKSPACE
-          timeout 30 qemu-system-aarch64 -m 1024m -bios /usr/share/qemu-efi-aarch64/QEMU_EFI.fd -cpu cortex-a53 -smp 4 -machine virt -device ramfb -device qemu-xhci -device usb-kbd -nographic -serial mon:stdio -hda vix_uefi.img | ansifilter | tee log.txt || true
+          timeout 30 xvfb-run sh -c "qemu-system-aarch64 -m 1024m -bios /usr/share/qemu-efi-aarch64/QEMU_EFI.fd -cpu cortex-a53 -smp 4 -machine virt -device ramfb -device qemu-xhci -device usb-kbd -full-screen -serial mon:stdio -hda vix_uefi.img | ansifilter | tee log.txt & ffmpeg -y -framerate 25 -f x11grab -i +0,0 output.mp4"
 
       - name: upload image
         uses: actions/upload-artifact@v3
         with:
           name: image-aarch64
-          path: ${{runner.workspace}}/vix/vix_uefi.img
+          path: |
+            ${{runner.workspace}}/vix/vix_uefi.img
+            ${{runner.workspace}}/vix/output.mp4
 
       - name: check tests
         run: |
