--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -11,7 +11,7 @@ jobs:
       - name: install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install ansifilter nasm gcc-multilib g++-multilib xorriso grub-common mtools qemu-system-x86 llvm-dev libclang-dev clang python3 pkg-config flex bison xxd
+          sudo apt-get install xvfb ffmpeg ansifilter nasm gcc-multilib g++-multilib xorriso grub-common mtools qemu-system-x86 llvm-dev libclang-dev clang python3 pkg-config flex bison xxd
 
       - name: compile
         run: |
@@ -24,13 +24,15 @@ jobs:
       - name: run
         run: |
           cd $GITHUB_WORKSPACE
-          timeout 30 qemu-system-x86_64 -cdrom vix.iso -nographic | ansifilter | tee log.txt || true
+          timeout 30 xvfb-run sh -c "qemu-system-x86_64 -cdrom vix.iso -full-screen | ansifilter | tee log.txt & ffmpeg -y -loglevel error -hide_banner -framerate 25 -f x11grab -i +0,0 output.mp4" || true
 
-      - name: upload image
+      - name: upload files
         uses: actions/upload-artifact@v3
         with:
-          name: image-x86_32
-          path: ${{runner.workspace}}/vix/vix.iso
+          name: run-x86_32
+          path: |
+            ${{runner.workspace}}/vix/vix.iso
+            ${{runner.workspace}}/vix/output.mp4
 
       - name: check tests
         run: |
@@ -75,10 +77,10 @@ jobs:
           cd $GITHUB_WORKSPACE
           timeout 30 qemu-system-x86_64 -bios /usr/share/ovmf/OVMF.fd -nographic -serial mon:stdio -hda vix_uefi.img | ansifilter | tee log.txt || true
 
-      - name: upload image
+      - name: upload files
         uses: actions/upload-artifact@v3
         with:
-          name: image-x86_64
+          name: run-x86_64
           path: ${{runner.workspace}}/vix/vix_uefi.img
 
       - name: check tests
@@ -97,7 +99,7 @@ jobs:
       - name: install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install xvfb ffmpeg ansifilter qemu-system-arm qemu-efi-aarch64 seabios llvm-dev libclang-dev clang python3 pkg-config flex bison gcc-aarch64-linux-gnu g++-aarch64-linux-gnu binutils-aarch64-linux-gnu git nasm gzip gawk mtools xxd
+          sudo apt-get install ansifilter qemu-system-arm qemu-efi-aarch64 seabios llvm-dev libclang-dev clang python3 pkg-config flex bison gcc-aarch64-linux-gnu g++-aarch64-linux-gnu binutils-aarch64-linux-gnu git nasm gzip gawk mtools xxd
 
       - name: build limine
         run: |
@@ -118,15 +120,13 @@ jobs:
       - name: run
         run: |
           cd $GITHUB_WORKSPACE
-          timeout 30 xvfb-run sh -c "qemu-system-aarch64 -m 1024m -bios /usr/share/qemu-efi-aarch64/QEMU_EFI.fd -cpu cortex-a53 -smp 4 -machine virt -device ramfb -device qemu-xhci -device usb-kbd -full-screen -serial mon:stdio -hda vix_uefi.img | ansifilter | tee log.txt & ffmpeg -y -loglevel error -hide_banner -framerate 25 -f x11grab -i +0,0 output.mp4" || true
+          timeout 30 qemu-system-aarch64 -m 1024m -bios /usr/share/qemu-efi-aarch64/QEMU_EFI.fd -cpu cortex-a53 -smp 4 -machine virt -device ramfb -device qemu-xhci -device usb-kbd -nographic -serial mon:stdio -hda vix_uefi.img | ansifilter | tee log.txt || true
 
-      - name: upload image
+      - name: upload files
         uses: actions/upload-artifact@v3
         with:
-          name: image-aarch64
-          path: |
-            ${{runner.workspace}}/vix/vix_uefi.img
-            ${{runner.workspace}}/vix/output.mp4
+          name: run-aarch64
+          path: ${{runner.workspace}}/vix/vix_uefi.img
 
       - name: check tests
         run: |
