--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -11,7 +11,7 @@ jobs:
       - name: install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install xvfb ffmpeg ansifilter nasm gcc-multilib g++-multilib xorriso grub-common mtools qemu-system-x86 llvm-dev libclang-dev clang python3 pkg-config flex bison xxd
+          sudo apt-get install ansifilter nasm gcc-multilib g++-multilib xorriso grub-common mtools qemu-system-x86 llvm-dev libclang-dev clang python3 pkg-config flex bison xxd
 
       - name: compile
         run: |
@@ -24,15 +24,13 @@ jobs:
       - name: run
         run: |
           cd $GITHUB_WORKSPACE
-          timeout 30 xvfb-run sh -c "qemu-system-x86_64 -cdrom vix.iso -serial mon:stdio | ansifilter | tee log.txt & ffmpeg -y -loglevel error -hide_banner -framerate 25 -f x11grab -i +0,0 output.mp4" || true
+          timeout 30 qemu-system-x86_64 -cdrom vix.iso -nographic | ansifilter | tee log.txt || true
 
       - name: upload files
         uses: actions/upload-artifact@v3
         with:
-          name: run-x86_32
-          path: |
-            ${{runner.workspace}}/vix/vix.iso
-            ${{runner.workspace}}/vix/output.mp4
+          name: ci-run-x86_32
+          path: ${{runner.workspace}}/vix/vix.iso
 
       - name: check tests
         run: |
@@ -80,7 +78,7 @@ jobs:
       - name: upload files
         uses: actions/upload-artifact@v3
         with:
-          name: run-x86_64
+          name: ci-run-x86_64
           path: ${{runner.workspace}}/vix/vix_uefi.img
 
       - name: check tests
@@ -125,7 +123,7 @@ jobs:
       - name: upload files
         uses: actions/upload-artifact@v3
         with:
-          name: run-aarch64
+          name: ci-run-aarch64
           path: ${{runner.workspace}}/vix/vix_uefi.img
 
       - name: check tests
@@ -152,7 +150,7 @@ jobs:
           python3 tools/locchart.py >> $GITHUB_STEP_SUMMARY
 
       - name: codespell
-        run: cd $GITHUB_WORKSPACE && codespell -q 3 --builtin clear -S ./.git,./kernel/scripts -L useable || true
+        run: cd $GITHUB_WORKSPACE && codespell -q 3 --builtin clear -S ./.git,./kernel/scripts -L useable || true >> $GITHUB_STEP_SUMMARY
 
       - name: clang-format
-        run: cd $GITHUB_WORKSPACE && python3 tools/clang_check.py
+        run: cd $GITHUB_WORKSPACE && python3 tools/clang_check.py >> $GITHUB_STEP_SUMMARY
